AWSClientRuntime/Tests/Protocols/RestXML/Models/Errors/InvalidGreetingBody+Decodable.swift
//
// Copyright Amazon.com Inc. or its affiliates.
// All Rights Reserved.
//
// SPDX-License-Identifier: Apache-2.0
//
        
// Code generated by smithy-swift-codegen. DO NOT EDIT!

import ClientRuntime

struct InvalidGreetingBody: Equatable {
    public let message: String?
}

extension InvalidGreetingBody: Decodable {
    enum CodingKeys: String, CodingKey {
        case message = "Message"
    }

    public init (from decoder: Decoder) throws {
        let containerValues = try decoder.container(keyedBy: Key.self)
        let errorContainer = try containerValues.nestedContainer(keyedBy: CodingKeys.self, forKey: Key("Error"))
        
        let messageDecoded = try errorContainer.decodeIfPresent(String.self, forKey: .message)
        message = messageDecoded
    }
}
